--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   animated_text_kit: ^4.2.1
   hexcolor: ^2.0.6
   persistent_bottom_nav_bar: ^4.0.2
+  url_launcher: ^6.0.20
 
 
 dev_dependencies:
@@ -63,8 +64,10 @@ flutter:
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
-  uses-material-design: true
 
+  uses-material-design: true
+  assets:
+    - assets/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
